--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jslint": "^0.12.1",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
+    "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
