--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.8.6",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.5",
     "react-redux": "^7.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.0",
