--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "jslint": "^0.12.1",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
+    "react-file-reader": "^1.1.4",
     "react-redux": "^7.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.0",
