--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "homepage": "https://cfpinedao.github.io/profilepage/",
   "dependencies": {
+    "activestorage": "^5.2.3",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "core-js": "^3.0.1",
@@ -13,11 +14,13 @@
     "jslint": "^0.12.1",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
+    "react-activestorage-provider": "^0.8.0",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
     "react-file-reader": "^1.1.4",
+    "react-native-activestorage": "^0.1.0",
     "react-redux": "^7.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.0",
